2005-09-20  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Check for libgif if libungif is not found.
	It's a different name for the library, apparently.

	Reported by:  Riccardo Mottola  <riccardo@kaffe.org>

2005-09-20  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.classlibrary-compile:
	Added information on how to obtain Kaffe's patched kjc's
	source code.

	Reported by:  Kiyo Inaba <inaba@src.ricoh.co.jp>

2005-09-20  Dalibor Topic  <robilad@kaffe.org>

	* README, 
	RELEASE-NOTES, 
	WHATSNEW,
	configure.ac,
	libraries/javalib/gnu/classpath/VMSystemProperties.java:
	Updated for 1.1.6.

	* libraries/clib/awt/classpath-qt/Makefile.am:
	Removed qtembeddedwindowpeer.cpp since QtX11Embed widgets 
	dont exist on OS X.

2005-09-19  Wolfgang Baer <WBaer@gmx.de>

	* kaffe/scripts/jdb.in, 
	THIRDPARTY: Fixed typos.

2005-09-19  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am: (EXTRA_DIST) Removed the docs files again
	to avoid pushing GNU FDL licensed documentation into Debian.

2005-09-18  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am,
	config/Makefile.am,
	kaffe/kaffevm/boehm-gc/Makefile.am,
	kaffe/kaffevm/kaffe-gc/Makefile.am,
	libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.am,
	libraries/clib/awt/nano-X/Makefile.am,
	replace/Makefile.am,
	test/regression/Makefile.am,
	tools/gjdoc/javalib/Makefile.am:
	Added missing files from pre1 tarball to makefiles.

2005-09-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/io/AudioPlayer.c:
	Removed.

2005-09-18  Andreas Tobler  <a.tobler@schweiz.ch>

	* libraries/clib/native/VMRuntime.c
	(Java_java_lang_VMRuntime_availableProcessors):
	Mark unused parameters as unused to fix compiler warnings.

2005-09-18  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: (--disable-boehm-gc-configuration)
	New option to disable configure for boehm.gc, which leads to
	problems on platforms on which boehm-gc was not ported to.

2005-09-18  Ito Kazumitsu  <kaz@maczuka.gcd.org>
