@@ -32,14 +32,11 @@ public class Variable extends Location implements java.util.Enumeration
   }
 
   private int flags = SIMPLE_FLAG;
-  /* The SIMPLE_FLAG records the isSimple (q.v.) state. */
+  /** The SIMPLE_FLAG records the isSimple (q.v.) state. */
   private static final int SIMPLE_FLAG = 0x1;
-  /* The PARAMETER_FLAG bit is true for parameters. */
+  /** The PARAMETER_FLAG bit is true for parameters. */
   private static final int PARAMETER_FLAG = 0x2;
-  /* The ARTIFICIAL_FLAG bits marks internals variables.
-     PARAMETER_FLAG|ARTIFICIAL_FLAG means an incoming parameter. */
-  private static final int ARTIFICIAL_FLAG = 0x4;
-  private static final int LIVE_FLAG = 0x8;
+  private static final int LIVE_FLAG = 0x4;
 
   static final int UNASSIGNED = -1;
   /** The local variable slot number used by this variable.
@@ -83,16 +80,6 @@ public class Variable extends Location implements java.util.Enumeration
     setFlag(parameter, PARAMETER_FLAG);
   }
 
-  public final boolean isArtificial ()
-  {
-    return (flags & ARTIFICIAL_FLAG) != 0;
-  }
-  
-  public final void setArtificial (boolean artificial)
-  {
-    setFlag(artificial, ARTIFICIAL_FLAG);
-  }
-
   /** Assign a local variable to a given local variable slot.
    * @param varIndex the index of the local variables.
    * @return true iff we succeeded (i.e. the slot was unused) */
@@ -122,7 +109,6 @@ public class Variable extends Location implements java.util.Enumeration
 
   /**
    * Allocate slots for a local variable (or parameter).
-   * @return the index of the (first) slot.
    */
   public void allocateLocal (CodeAttr code)
   {
